<?xml version="1.0" encoding="utf-8"?>
<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">-->

    <!--<data>

        <variable
            name="loginModel"
            type="com.example.demo.viewmodel.TaskViewModel" />
    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCDCDC"
        tools:context="com.example.demo.view.HomeActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_calender_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/show_calender"
            app:layout_constraintEnd_toStartOf="@+id/add_task_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/show_calender_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.sundeepk.compactcalendarview.CompactCalendarView
            android:id="@+id/calender_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:compactCalendarBackgroundColor="@android:color/darker_gray"
            app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
            app:compactCalendarMultiEventIndicatorColor="@android:color/holo_orange_dark"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextColor="@android:color/holo_blue_bright"
            app:compactCalendarTextSize="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@+id/add_task_btn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/task_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tasks"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calender_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_title_tv"
            tools:listitem="@layout/task_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
<!--
</layout>-->
